--- a/Frontend/admin_panel/package.json
+++ b/Frontend/admin_panel/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.8.4",
     "framer-motion": "^12.6.3",
     "js-cookie": "^3.0.5",
