--- a/Frontend/admin_panel/package.json
+++ b/Frontend/admin_panel/package.json
@@ -15,6 +15,8 @@
     "axios": "^1.8.4",
     "framer-motion": "^12.6.3",
     "js-cookie": "^3.0.5",
+    "jspdf": "^3.0.1",
+    "pdfmake": "^0.2.18",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
