--- a/Frontend/catalog_panel/package.json
+++ b/Frontend/catalog_panel/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^2.6.1",
     "maplibre-gl": "^5.3.0",
     "pdfmake": "^0.2.18",
+    "raw-loader": "^4.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
