--- a/Frontend/admin_panel/package.json
+++ b/Frontend/admin_panel/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.2.0",
     "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.8.4",
+    "dotenv": "^16.5.0",
     "framer-motion": "^12.6.3",
     "js-cookie": "^3.0.5",
     "jspdf": "^3.0.1",
