--- a/Frontend/catalog_panel/package.json
+++ b/Frontend/catalog_panel/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@reduxjs/toolkit": "^2.6.1",
+    "dotenv": "^16.5.0",
     "maplibre-gl": "^5.3.0",
     "pdfmake": "^0.2.18",
     "raw-loader": "^4.0.2",
