изменена конфигурация nginx и docker для локального использования и для prod

--- a/nginx/nginx.local.conf
+++ b/nginx/nginx.local.conf
@@ -4,12 +4,16 @@ events {
 
 http {
     server {
+        include mime.types;
+        default_type application/octet-stream;
+
         listen 8081;
+        server_name localhost;
 
         location /docs {
-        root /etc/nginx/html;
-        index index.html;
-        try_files $uri $uri/ /index.html;
+            root /etc/nginx/html;
+            index index.html;
+            try_files $uri $uri/ /index.html;
         }
 
         # Catalog Service API
