--- a/docker-compose.local.yaml
+++ b/docker-compose.local.yaml
@@ -1,5 +1,6 @@
 networks:
   dev:
+    driver: bridge
 
 services:
   postgresDB:
@@ -46,6 +47,7 @@ services:
       USER: admin
       PASSWORD: admin
       MINIO_HOST: minio
+      SCHEMA: catalog
     ports:
       - "8001:8001"
     networks:
@@ -65,6 +67,7 @@ services:
       minio:
         condition: service_healthy
     environment:
+      SCHEMA: accounts
       DRIVER: asyncpg
       HOST: postgresDB
       PORT: 5433
@@ -112,7 +115,7 @@ services:
     image: nginx:latest
     container_name: nginx
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/nginx.local.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/static:/etc/nginx/html:ro
     ports:
       - "8081:8081"
@@ -139,6 +142,9 @@ services:
     build:
       context: ./Frontend/catalog_panel
       dockerfile: Dockerfile
+      args:
+        VITE_ADMIN_API_URL: http://localhost:8000
+        VITE_CATALOG_API_URL: http://localhost:8001
     ports:
       - "5173:5173"
     environment:
@@ -167,6 +173,9 @@ services:
     build:
       context: ./Frontend/admin_panel
       dockerfile: Dockerfile
+      args:
+        VITE_ADMIN_API_URL: http://localhost:8000
+        VITE_CATALOG_API_URL: http://localhost:8001
     ports:
       - "5174:5174"
     environment:
