--- a/nginx/nginx.prod.conf
+++ b/nginx/nginx.prod.conf
@@ -31,8 +31,8 @@ http {
         listen 443 ssl;
         server_name craftedinteriors.store www.craftedinteriors.store;
 
-        ssl_certificate /etc/letsencrypt/live/craftedinteriors.store/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/craftedinteriors.store/privkey.pem;
+        ssl_certificate /certbot/conf/fullchain.pem;
+        ssl_certificate_key /certbot/conf/privkey.pem;
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
         ssl_prefer_server_ciphers on;
@@ -70,8 +70,8 @@ http {
         listen 443 ssl;
         server_name admin.craftedinteriors.store;
 
-        ssl_certificate /etc/letsencrypt/live/craftedinteriors.store/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/craftedinteriors.store/privkey.pem;
+        ssl_certificate /certbot/conf/fullchain.pem;
+        ssl_certificate_key /certbot/conf/privkey.pem;
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
         ssl_prefer_server_ciphers on;
