changed api urls

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -150,13 +150,13 @@ services:
       context: ./Frontend/catalog_panel
       dockerfile: Dockerfile
       args:
-        VITE_ADMIN_API_URL: http://185.209.21.236:8000
-        VITE_CATALOG_API_URL: http://185.209.21.236:8001
+        VITE_ADMIN_API_URL: https://www.craftedinteriors.store/api/accounts
+        VITE_CATALOG_API_URL: https://www.craftedinteriors.store/api/catalog
     ports:
       - "5173:5173"
     environment:
-      VITE_ADMIN_API_URL: http://185.209.21.236:8000
-      VITE_CATALOG_API_URL: http://185.209.21.236:8001
+      VITE_ADMIN_API_URL: https://www.craftedinteriors.store/api/accounts
+      VITE_CATALOG_API_URL: https://www.craftedinteriors.store/api/catalog
     expose:
       - "5173"
     healthcheck:
@@ -178,13 +178,13 @@ services:
       context: ./Frontend/admin_panel
       dockerfile: Dockerfile
       args:
-        VITE_ADMIN_API_URL: http://185.209.21.236:8000
-        VITE_CATALOG_API_URL: http://185.209.21.236:8001
+        VITE_ADMIN_API_URL: https://www.craftedinteriors.store/api/accounts
+        VITE_CATALOG_API_URL: https://www.craftedinteriors.store/api/catalog
     ports:
       - "5174:5174"
     environment:
-      VITE_ADMIN_API_URL: http://185.209.21.236:8000
-      VITE_CATALOG_API_URL: http://185.209.21.236:8001
+      VITE_ADMIN_API_URL: https://www.craftedinteriors.store/api/accounts
+      VITE_CATALOG_API_URL: https://www.craftedinteriors.store/api/catalog
     expose:
       - "5174"
     healthcheck:
