--- a/docker-compose.local.yaml
+++ b/docker-compose.local.yaml
@@ -143,13 +143,13 @@ services:
       context: ./Frontend/catalog_panel
       dockerfile: Dockerfile
       args:
-        VITE_ADMIN_API_URL: http://localhost:8000
-        VITE_CATALOG_API_URL: http://localhost:8001
+        VITE_ADMIN_API_URL: http://localhost:8081/api/accounts
+        VITE_CATALOG_API_URL: http://localhost:8081/api/catalogs
     ports:
       - "5173:5173"
     environment:
-      VITE_ADMIN_API_URL: http://localhost:8000
-      VITE_CATALOG_API_URL: http://localhost:8001
+      VITE_ADMIN_API_URL: http://localhost:8081/api/accounts
+      VITE_CATALOG_API_URL: http://localhost:8081/api/catalogs
     expose:
       - "5173"
     depends_on:
@@ -174,13 +174,13 @@ services:
       context: ./Frontend/admin_panel
       dockerfile: Dockerfile
       args:
-        VITE_ADMIN_API_URL: http://localhost:8000
-        VITE_CATALOG_API_URL: http://localhost:8001
+        VITE_ADMIN_API_URL: http://localhost:8081/api/accounts
+        VITE_CATALOG_API_URL: http://localhost:8081/api/catalogs
     ports:
       - "5174:5174"
     environment:
-      VITE_ADMIN_API_URL: http://localhost:8000
-      VITE_CATALOG_API_URL: http://localhost:8001
+      VITE_ADMIN_API_URL: http://localhost:8081/api/accounts
+      VITE_CATALOG_API_URL: http://localhost:8081/api/catalogs
     expose:
       - "5174"
     depends_on:
