--- a/nginx/nginx.prod.conf
+++ b/nginx/nginx.prod.conf
@@ -49,16 +49,16 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        location /api/catalog {
-            proxy_pass http://catalog_service:8001;
+        location /api/catalog/ {
+            proxy_pass http://catalog_service:8001/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        location /api/accounts {
-            proxy_pass http://accounts_service:8000;
+        location /api/accounts/ {
+            proxy_pass http://accounts_service:8000/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
