changed nginx configs

--- a/Frontend/catalog_panel/Dockerfile
+++ b/Frontend/catalog_panel/Dockerfile
@@ -3,9 +3,11 @@ FROM node:20-alpine
 
 ARG VITE_ADMIN_API_URL
 ARG VITE_CATALOG_API_URL
+ARG VITE_MINIO_URL
 
 ENV VITE_ADMIN_API_URL=$VITE_ADMIN_API_URL
 ENV VITE_CATALOG_API_URL=$VITE_CATALOG_API_URL
+ENV VITE_MINIO_URL=$VITE_MINIO_URL
 
 # Устанавливаем рабочую директорию
 WORKDIR /app
