--- a/nginx/nginx.prod.conf
+++ b/nginx/nginx.prod.conf
@@ -14,78 +14,6 @@ http {
     keepalive_timeout  65;
     types_hash_max_size 2048;
 
-    server {
-        listen 80;
-        server_name craftedinteriors.store www.craftedinteriors.store admin.craftedinteriors.store;
-
-        location /.well-known/acme-challenge/ {
-            root /var/www/certbot;
-        }
-
-        location / {
-            return 301 https://$host$request_uri;
-        }
-    }
-
-    server {
-        listen 443 ssl;
-        server_name craftedinteriors.store www.craftedinteriors.store;
-
-        ssl_certificate /certbot/conf/fullchain.pem;
-        ssl_certificate_key /certbot/conf/privkey.pem;
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers HIGH:!aNULL:!MD5;
-        ssl_prefer_server_ciphers on;
-
-        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
-        add_header X-Frame-Options DENY;
-        add_header X-Content-Type-Options nosniff;
-
-        location / {
-            proxy_pass http://catalog_front:5173;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        location /api/catalog/ {
-            proxy_pass http://catalog_service:8001/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        location /api/accounts/ {
-            proxy_pass http://accounts_service:8000/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-    }
-
-    server {
-        listen 443 ssl;
-        server_name admin.craftedinteriors.store;
-
-        ssl_certificate /certbot/conf/fullchain.pem;
-        ssl_certificate_key /certbot/conf/privkey.pem;
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers HIGH:!aNULL:!MD5;
-        ssl_prefer_server_ciphers on;
-
-        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
-        add_header X-Frame-Options DENY;
-        add_header X-Content-Type-Options nosniff;
-
-        location / {
-            proxy_pass http://admin_front:5174;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-    }
+    # Include subdomain-specific configurations
+    include /etc/nginx/conf.d/*.conf;
 }
