--- a/nginx/conf.d/minio.conf
+++ b/nginx/conf.d/minio.conf
@@ -13,7 +13,7 @@ server {
     add_header X-Content-Type-Options nosniff;
 
     location / {
-        proxy_pass http://minio_service:9001;
+        proxy_pass http://minio:9001;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -21,7 +21,7 @@ server {
     }
 
     location /minio/ {
-        proxy_pass http://minio_service:9000/;
+        proxy_pass http://minio:9000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
