--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -155,15 +155,15 @@ services:
       context: ./Frontend/catalog_panel
       dockerfile: Dockerfile
       args:
-        VITE_ADMIN_API_URL: https://api.craftedinteriors.store/accounts
-        VITE_CATALOG_API_URL: https://api.craftedinteriors.store/catalogs
-        VITE_MINIO_URL: https://minio.craftedinteriors.store/minio
+        VITE_ADMIN_API_URL: http://185.209.21.236:8000
+        VITE_CATALOG_API_URL: http://185.209.21.236:8001
+        VITE_MINIO_URL: http://185.209.21.236:9000/crafted-interiors
     ports:
       - "5173:5173"
     environment:
-      VITE_ADMIN_API_URL: https://api.craftedinteriors.store/accounts
-      VITE_CATALOG_API_URL: https://api.craftedinteriors.store/catalogs
-      VITE_MINIO_URL: https://minio.craftedinteriors.store/minio
+      VITE_ADMIN_API_URL: http://185.209.21.236:8000
+      VITE_CATALOG_API_URL: http://185.209.21.236:8001
+      VITE_MINIO_URL: http://185.209.21.236:9000/crafted-interiors
     expose:
       - "5173"
     healthcheck:
@@ -185,15 +185,15 @@ services:
       context: ./Frontend/admin_panel
       dockerfile: Dockerfile
       args:
-        VITE_ADMIN_API_URL: https://api.craftedinteriors.store/accounts
-        VITE_CATALOG_API_URL: https://api.craftedinteriors.store/catalogs
-        VITE_MINIO_URL: https://minio.craftedinteriors.store/minio
+        VITE_ADMIN_API_URL: http://185.209.21.236:8000
+        VITE_CATALOG_API_URL: http://185.209.21.236:8001
+        VITE_MINIO_URL: http://185.209.21.236:9000/crafted-interiors
     ports:
       - "5174:5174"
     environment:
-      VITE_ADMIN_API_URL: https://api.craftedinteriors.store/accounts
-      VITE_CATALOG_API_URL: https://api.craftedinteriors.store/catalogs
-      VITE_MINIO_URL: https://minio.craftedinteriors.store/minio
+      VITE_ADMIN_API_URL: http://185.209.21.236:8000
+      VITE_CATALOG_API_URL: http://185.209.21.236:8001
+      VITE_MINIO_URL: http://185.209.21.236:9000/crafted-interiors
     expose:
       - "5174"
     healthcheck:
