--- a/nginx/conf.d/api.conf
+++ b/nginx/conf.d/api.conf
@@ -18,8 +18,8 @@ server {
             try_files $uri $uri/ /index.html;
         }
 
-    location /catalogs/ {
-        proxy_pass http://catalog_service:8001/;
+    location /catalogs {
+        proxy_pass http://catalog_service:8001;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -34,8 +34,8 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    location /accounts/ {
-        proxy_pass http://accounts_service:8000/;
+    location /accounts {
+        proxy_pass http://accounts_service:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
