--- a/nginx/conf.d/api.conf
+++ b/nginx/conf.d/api.conf
@@ -18,7 +18,7 @@ server {
             try_files $uri $uri/ /index.html;
         }
 
-    location /catalogs {
+    location /catalogs/ {
         proxy_pass http://catalog_service:8001;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -34,7 +34,7 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    location /accounts {
+    location /accounts/ {
         proxy_pass http://accounts_service:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
