--- a/nginx/conf.d/api.conf
+++ b/nginx/conf.d/api.conf
@@ -19,7 +19,7 @@ server {
         }
 
     location /catalogs/ {
-        proxy_pass http://catalog_service:8001/;
+        proxy_pass http://catalog_service:8001;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -35,7 +35,7 @@ server {
     }
 
     location /accounts/ {
-        proxy_pass http://accounts_service:8000/;
+        proxy_pass http://accounts_service:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
