--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name craftedinteriors.store www.craftedinteriors.store admin.craftedinteriors.store api.craftedinteriors.store grafana.craftedinteriors.store minio.craftedinteriors.store;
+    server_name craftedinteriors.store www.craftedinteriors.store admin.craftedinteriors.store api.catalogs.craftedinteriors.store api.accounts.craftedinteriors.store grafana.craftedinteriors.store;
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
