--- a/nginx/conf.d/api_accounts.conf
+++ b/nginx/conf.d/api_accounts.conf
@@ -11,12 +11,27 @@ server {
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
     add_header X-Frame-Options DENY;
     add_header X-Content-Type-Options nosniff;
+    add_header X-Server-Debug "Accounts-API" always;
 
     location / {
+        if ($request_method = 'OPTIONS') {
+            add_header 'Access-Control-Allow-Origin' 'https://admin.craftedinteriors.store, https://www.craftedinteriors.store';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'Authorization, access_token, Content-Type';
+            add_header 'Access-Control-Max-Age' 1728000;
+            return 204;
+        }
+
         proxy_pass http://accounts_service:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Authorization $http_authorization;
+        proxy_set_header access_token $http_access_token;
+
+        add_header 'Access-Control-Allow-Origin' 'https://admin.craftedinteriors.store, https://www.craftedinteriors.store';
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
+        add_header 'Access-Control-Allow-Headers' 'Authorization, access_token, Content-Type';
     }
 }
