experiment with cors

--- a/nginx/nginx.prod.conf
+++ b/nginx/nginx.prod.conf
@@ -5,6 +5,19 @@ events {
 }
 
 http {
+    log_format detailed_log_format
+    '[$time_local] '
+    'client=$remote_addr '
+    'method=$request_method '
+    'uri=$request_uri '
+    'status=$status '
+    'upstream_addr=$upstream_addr '
+    'upstream_uri=$upstream_http_host$upstream_uri '
+    'request_headers=[Host=$http_host, Origin=$http_origin, access_token=$http_access_token, Cookie=$http_cookie] '
+    'response_headers=[Access-Control-Allow-Origin=$sent_http_access_control_allow_origin, X-Debug-Access-Token=$sent_http_x_debug_access_token] '
+    'referer=$http_referer '
+    'user_agent=$http_user_agent';
+
     include mime.types;
     default_type application/octet-stream;
 
