--- a/nginx/nginx.prod.conf
+++ b/nginx/nginx.prod.conf
@@ -24,6 +24,7 @@ http {
     sendfile        on;
     tcp_nopush      on;
     tcp_nodelay     on;
+    underscores_in_headers on;
     keepalive_timeout  65;
     types_hash_max_size 2048;
 
