--- a/nginx/conf.d/api_accounts.conf
+++ b/nginx/conf.d/api_accounts.conf
@@ -20,6 +20,6 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header Authorization $http_authorization;
-        proxy_set_header access_token $http_access_token;
+        proxy_set_header access $http_access;
     }
 }
